# SELDestroyer

./: README.md
firmware/: .gitignore  config.h  destroyer.c  destroyer.h  display.c  display.h  global.h  i2c.c  i2c.h  ina233.c  ina233.h  main.c  protocol.c  protocol.h  ssd1306.c  ssd1306.h  system.c  system.h
firmware/nbproject/: configurations.xml  project.xml
hardware/: Polimi_Logo.kicad_mod  fp-lib-table  output_section.kicad_sch  polimi_A4.kicad_wks  power.kicad_sch  sel_destroyer.kicad_pcb  sel_destroyer.kicad_pro  sel_destroyer.kicad_sch  sym-lib-table  uc.kicad_sch
hardware/docs/: display_link
hardware/lib/: 2024-03-24_13-44-57.kicad_sym
hardware/lib/LocalLibrary.pretty/: CT3151.kicad_mod
hardware/lib/footprints.pretty/: DGN0008D_L.kicad_mod  DGN0008D_M.kicad_mod  DGN0008D_N.kicad_mod
host/cli/: CMakeLists.txt
host/cli/include/: options.hpp
host/cli/src/: main.cpp  options.cpp
host/libseldestroyer/: CMakeLists.txt  PROTOCOL.md  README.md
host/libseldestroyer/include/: CMakeLists.txt  exception.hpp  global.hpp  libseldestroyer.h  low_level_serial.hpp  protocol.hpp  session.hpp  version.h.in
host/libseldestroyer/src/: libseldestroyer.cpp  low_level_serial.cpp  protocol.cpp  session.cpp
host/libseldestroyer/test/: CMakeLists.txt  exec_tests.sh
host/libseldestroyer/test/c/: open_close.c
host/libseldestroyer/test/cpp/: full_test_ok.cpp  test.hpp  wrong_device.cpp
