cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(libseldestroyer)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(CMAKE_BUILD_TYPE Debug)

set(LIBSELDESTROYER_VERSION_MAJOR 0)
set(LIBSELDESTROYER_VERSION_MINOR 1)
set(LIBSELDESTROYER_VERSION_PATCH 1)
set(LIBSELDESTROYER_VERSION ${LIBSELDESTROYER_VERSION_MAJOR}.${LIBSELDESTROYER_VERSION_MINOR}.${LIBSELDESTROYER_VERSION_PATCH})


set(LIBSELDESTROYER_VERSION_HEADER ${CMAKE_BINARY_DIR}/include/version.h.in)
message("Generating ${LIBSELDESTROYER_VERSION_HEADER}...")
configure_file( ${CMAKE_SOURCE_DIR}/include/version.h.in ${LIBSELDESTROYER_VERSION_HEADER} )

include_directories(${CMAKE_SOURCE_DIR}/include)


file(GLOB_RECURSE FOOLIB_SOURCE_FILES ${CMAKE_SOURCE_DIR}/src/*.cpp ${CMAKE_SOURCE_DIR}/src/*.c)

add_library(seldestroyer SHARED
  ${LIBSELDESTROYER_VERSION_HEADER}
  ${FOOLIB_SOURCE_FILES}
)

target_compile_options(seldestroyer PRIVATE -Wall -Wextra -Wpedantic -Werror)

install(TARGETS seldestroyer
        EXPORT seldestroyer-targets
        ARCHIVE DESTINATION ${LIBSELDESTROYER_INSTALL_LIB_DIR}
        LIBRARY DESTINATION ${LIBSELDESTROYER_INSTALL_LIB_DIR}
        RUNTIME DESTINATION ${LIBSELDESTROYER_INSTALL_BIN_DIR}
)

add_subdirectory(include)
add_subdirectory(test)